--- a/src/FormationBundle/Resources/views/promotion/index.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/index.html.twig
@@ -12,14 +12,8 @@
                         <figcaption>
                             <p>{{ promotion.titre }}</p>
                             <p>{{ promotion.semaines }}semaines</p>
-                            <ul>
-                                <li>
-                                    <a href="{{ path('promotion_show', { 'id': promotion.id }) }}">show</a>
-                                </li>
-                                <li>
-                                    <a href="{{ path('promotion_edit', { 'id': promotion.id }) }}">edit</a>
-                                </li>
-                            </ul>
+                                    <a class="btn btn-default edit_admin" href="{{ path('promotion_show', { 'id': promotion.id }) }}">Details</a>
+                                    <a class="btn btn-default edit_admin" href="{{ path('promotion_edit', { 'id': promotion.id }) }}">Editer</a>
                         </figcaption>
                     </figure>
                 {% endfor %}
