--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,7 @@
     <body>
 
     <ul id="dropdown1" class="dropdown-content">
-        <li><a>Promotions</a></li>
+        <li><a href="{{ path('archive_prom') }}">Promotions</a></li>
         <li class="divider"></li>
         <li><a href="{{ path('archive_index') }}">Eleves</a></li>
     </ul>
