--- a/src/FormationBundle/Resources/views/Default/index.html.twig
+++ b/src/FormationBundle/Resources/views/Default/index.html.twig
@@ -3,55 +3,60 @@
 {% block body %}
 
 {% for eleve in eleve %}
-  <p>{{ eleve.nom }}</p>
+  <p>Nom et Prénom de l'élève : </br>
+    {{ eleve.nom }}</p>
 {% endfor %}
+
 {{ form_start(form) }}
+<div class="container">
+    <div class="col s12 m10">
 	<table class="striped highlight">
       <thead>
         <tr>
-        	<th style="text-align: center;" colspan="2">module</th>
-          <th style="text-align: center;" colspan="2">4</th>
-          <th style="text-align: center;" colspan="2">5</th>
-          <th style="text-align: center;" colspan="2">6</th>
-          <th style="text-align: center;" colspan="2">7</th>
-          <th style="text-align: center;" colspan="2">8</th>
-          <th style="text-align: center;" colspan="2">9</th>
-          <th style="text-align: center;" colspan="2">10</th>
-          <th style="text-align: center;" colspan="2">11</th>
-          <th style="text-align: center;" colspan="2">12</th>
-          <th style="text-align: center;" colspan="2">13</th>
-          <th style="text-align: center;" colspan="2">14</th>
-          <th style="text-align: center;" colspan="2">15</th>
+            <th style="text-align: center;" colspan="2">module</th>
+            <th style="text-align: center;" colspan="2">Semaine 1</th>
+            <th style="text-align: center;" colspan="2">Semaine 2</th>
+            <th style="text-align: center;" colspan="2">Semaine 3</th>
+            <th style="text-align: center;" colspan="2">Semaine 4</th>
+            {#<th style="text-align: center;" colspan="2">8</th>#}
+            {#<th style="text-align: center;" colspan="2">9</th>#}
+            {#<th style="text-align: center;" colspan="2">10</th>#}
+            {#<th style="text-align: center;" colspan="2">11</th>#}
+            {#<th style="text-align: center;" colspan="2">12</th>#}
+            {#<th style="text-align: center;" colspan="2">13</th>#}
+            {#<th style="text-align: center;" colspan="2">14</th>#}
+            {#<th style="text-align: center;" colspan="2">15</th>#}
+            {#<th style="text-align: center;" colspan="2">Bilan</th>#}
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>numero</td>
           <td>nom</td>
-          <td>1</td>
-          <td>2</td>
-          <td>3</td>
-          <td>4</td>
-          <td>5</td>
-          <td>6</td>
-          <td>7</td>
-          <td>8</td>
-          <td>9</td>
-          <td>10</td>
-          <td>11</td>
-          <td>12</td>
-          <td>13</td>
-          <td>14</td>
-          <td>15</td>
-          <td>16</td>
-          <td>17</td>
-          <td>18</td>
-          <td>19</td>
-          <td>20</td>
-          <td>21</td>
-          <td>22</td>
-          <td>23</td>
-          <td>24</td>
+          <td>cours</td>
+          <td>tp</td>
+          <td>cours</td>
+          <td>tp</td>
+          <td>cours</td>
+          <td>tp</td>
+          <td>cours</td>
+          {#<td>tp</td>#}
+          {#<td>9</td>#}
+          {#<td>10</td>#}
+          {#<td>11</td>#}
+          {#<td>12</td>#}
+          {#<td>13</td>#}
+          {#<td>14</td>#}
+          {#<td>15</td>#}
+          {#<td>16</td>#}
+          {#<td>17</td>#}
+          {#<td>18</td>#}
+          {#<td>19</td>#}
+          {#<td>20</td>#}
+          {#<td>21</td>#}
+          {#<td>22</td>#}
+          {#<td>23</td>#}
+          {#<td>24</td>#}
         <tr>
         {% for module in modules %}
         	<tr>
@@ -65,10 +70,60 @@
                     <option value="NA">NA</option>
                   </select>
                 </td>
+                <td>
+                  <select name="note[]">
+                    <option value="nd">Non défini</option>
+                    <option value="A">A</option>
+                    <option value="EA">EA</option>
+                    <option value="NA">NA</option>
+                  </select>
+                </td>
+                <td>
+                  <select name="note[]">
+                    <option value="nd">Non défini</option>
+                    <option value="A">A</option>
+                    <option value="EA">EA</option>
+                    <option value="NA">NA</option>
+                  </select>
+                </td>
+                <td>
+                  <select name="note[]">
+                    <option value="nd">Non défini</option>
+                    <option value="A">A</option>
+                    <option value="EA">EA</option>
+                    <option value="NA">NA</option>
+                  </select>
+                </td>
+                <td>
+                  <select name="note[]">
+                    <option value="nd">Non défini</option>
+                    <option value="A">A</option>
+                    <option value="EA">EA</option>
+                    <option value="NA">NA</option>
+                  </select>
+                </td>
+                <td>
+                  <select name="note[]">
+                    <option value="nd">Non défini</option>
+                    <option value="A">A</option>
+                    <option value="EA">EA</option>
+                    <option value="NA">NA</option>
+                  </select>
+                </td>
+                <td>
+                  <select name="note[]">
+                    <option value="nd">Non défini</option>
+                    <option value="A">A</option>
+                    <option value="EA">EA</option>
+                    <option value="NA">NA</option>
+                  </select>
+                </td>
 	        </tr>
+
         {% endfor %}
       </tbody>
     </table>
-  <input class="btn btn-default edit_admin" type="submit" value="Create" />
+</div>
+  <input class="btn btn-default edit_admin button-centre" type="submit" value="Create" />
   {{ form_end(form) }}
 {% endblock %}
