--- a/src/FormationBundle/Resources/views/intervenant/index.html.twig
+++ b/src/FormationBundle/Resources/views/intervenant/index.html.twig
@@ -20,7 +20,7 @@
                         <td>
                             <ul>
                                 <li class="action">
-                                    <a href="{{ path('intervenant_edit', { 'id': intervenant.id }) }}">edit</a>
+                                    <a href="{{ path('intervenant_edit', { 'id': intervenant.id }) }}">Editer</a>
                                 </li>
                             </ul>
                         </td>
@@ -34,7 +34,7 @@
 
     <ul>
         <li class="button-centre">
-            <a class="btn btn-default edit_admin" href="{{ path('intervenant_new') }}">Create a new entry</a>
+            <a class="btn btn-default edit_admin" href="{{ path('intervenant_new') }}">Créer un nouvel intervenant</a>
         </li>
     </ul>
 {% endblock %}
