--- a/src/FormationBundle/Resources/views/promotion/edit.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Promotion edit</h1>
+    <h1 class="titre">Editer la promotion</h1>
 
     {{ form_start(edit_form) }}
     <div class="container">
@@ -22,6 +22,7 @@
                     </div>
                     <div class="input-field col s6">
                         {{ form_widget(edit_form.semaines) }}
+                        {{ form_label(edit_form.semaines) }}
                         {{ form_errors(edit_form.semaines) }}
                     </div>
                 </div>
@@ -40,6 +41,7 @@
                 <div class="row">
                     <div class="input-field col s6">
                         {{ form_widget(edit_form.langage) }}
+                        {{ form_label(edit_form.langage) }}
                         {{ form_errors(edit_form.langage) }}
                     </div>
                     <div class="input-field col s6">
@@ -61,15 +63,15 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        {{ form_label(edit_form.module) }}
                         {{ form_widget(edit_form.module) }}
+                        {{ form_label(edit_form.module) }}
                         {{ form_errors(edit_form.module) }}
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        {{ form_label(edit_form.eleve) }}
                         {{ form_widget(edit_form.eleve) }}
+                        {{ form_label(edit_form.eleve) }}
                         {{ form_errors(edit_form.eleve) }}
                     </div>
                 </div>
@@ -87,16 +89,18 @@
             </div>
         </div>
     </div>
-        <input type="submit" value="Edit" />
+    <div class="button-centre">
+        <input class="btn btn-default edit_admin" type="submit" value="Editer" />
+    </div>
     {{ form_end(edit_form) }}
 
     <ul>
-        <li>
-            <a href="{{ path('promotion_index') }}">Back to the list</a>
+        <li class="button-centre">
+            <a class="btn btn-default edit_admin"  href="{{ path('promotion_index') }}">Liste des élèves</a>
         </li>
-        <li>
+        <li class="button-centre">
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+            <input style="margin-top: 1%" class="btn btn-default edit_admin" type="submit" value="Supprimer">
             {{ form_end(delete_form) }}
         </li>
     </ul>
