--- a/src/FormationBundle/Resources/views/promotion/show.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/show.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div class="container">
     <div class="col s12 m7">
         <h2 class="titre">{{ promotion.titre }}</h2>
         <div class="card horizontal">
@@ -9,24 +10,23 @@
             </div>
             <div class="card-stacked">
                 <div class="card-content">
-                    <p>Titre  : {{ promotion.titre }}</p>
                     <p>Date de début : {{ promotion.dateDeb|date("d/m/Y") }}</p>
                     <p>Date de fin : {{ promotion.dateFin|date("d/m/Y") }}</p>
                     <p>Nombre de semaines : {{ promotion.semaines }}</p>
                 </div>
                 <div class="card-action">
-                    <a href="{{ path('promotion_edit', { 'id': promotion.id }) }}">Edit</a>
-                    <a href="{{ path('promotion_index') }}">Back to the list</a>
+                    <a href="{{ path('promotion_edit', { 'id': promotion.id }) }}">Editer</a>
+                    <a href="{{ path('promotion_index') }}">Retourner à la liste des formations</a>
                 </div>
             </div>
         </div>
     </div>
-
-    <ul>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
+    </div>
+    {#<ul>#}
+        {#<li>#}
+            {#{{ form_start(delete_form) }}#}
+                {#<input type="submit" value="Delete">#}
+            {#{{ form_end(delete_form) }}#}
+        {#</li>#}
     </ul>
 {% endblock %}
