--- a/src/FormationBundle/Resources/views/eleve/edit.html.twig
+++ b/src/FormationBundle/Resources/views/eleve/edit.html.twig
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div class="button-centre">
-        <input class="btn btn-default edit_admin" type="submit" value="Editer" />
+        <input class="btn btn-default edit_admin" type="submit" value="Valider" />
     </div>
     {{ form_end(edit_form) }}
 
