--- a/src/FormationBundle/Resources/views/langage/edit.html.twig
+++ b/src/FormationBundle/Resources/views/langage/edit.html.twig
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="button-centre">
-        <input class="btn btn-default edit_admin" type="submit" value="Create" />
+        <input class="btn btn-default edit_admin" type="submit" value="Valider" />
     </div>
     {{ form_end(edit_form) }}
 
