--- a/src/FormationBundle/Resources/views/module/edit.html.twig
+++ b/src/FormationBundle/Resources/views/module/edit.html.twig
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="button-centre">
-        <input class="btn btn-default edit_admin" type="submit" value="Créer" />
+        <input class="btn btn-default edit_admin" type="submit" value="Valider" />
     </div>
     {{ form_end(edit_form) }}
 
@@ -34,5 +34,10 @@
             <a class="btn btn-default edit_admin" href="{{ path('module_index') }}">Retourner à la liste des modules</a>
         </li>
     </ul>
+    {{ form_start (delete_form) }}
+    <div class="button-centre">
+        <input class="btn btn-default edit_admin" type="submit" value="Supprimer">
+    </div>
+    {{ form_end (delete_form) }}
 {% endblock %}
 
