--- a/src/FormationBundle/Resources/views/eleve/show.html.twig
+++ b/src/FormationBundle/Resources/views/eleve/show.html.twig
@@ -15,7 +15,7 @@
                     <p>Adresse : {{ eleve.adresse }}</p>
                     <p>Code Postal : {{ eleve.cp }}</p>
                     <p>Ville : {{ eleve.ville }}</p>
-                    <p>Téléphone : {{ eleve.tel }}</p>
+                    <p>Téléphone : 0{{ eleve.tel }}</p>
                     <p>Mail : {{ eleve.mail }}</p>
                 </div>
                 <div class="card-action">
