--- a/src/FormationBundle/Resources/views/promotion/edit.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/edit.html.twig
@@ -28,14 +28,14 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-                        {{ form_label(edit_form.nomForm) }}
-                        {{ form_widget(edit_form.nomForm) }}
-                        {{ form_errors(edit_form.nomForm) }}
+                        {{ form_label(edit_form.nomFormateur) }}
+                        {{ form_widget(edit_form.nomFormateur) }}
+                        {{ form_errors(edit_form.nomFormateur) }}
                     </div>
                     <div class="input-field col s6">
-                        {{ form_label(edit_form.prenomForm) }}
-                        {{ form_widget(edit_form.prenomForm) }}
-                        {{ form_errors(edit_form.prenomForm) }}
+                        {{ form_label(edit_form.prenomFormateur) }}
+                        {{ form_widget(edit_form.prenomFormateur) }}
+                        {{ form_errors(edit_form.prenomFormateur) }}
                     </div>
                 </div>
                 <div class="row">
@@ -51,9 +51,9 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-                        {{ form_label(edit_form.dateDeb) }}
-                        {{ form_widget(edit_form.dateDeb) }}
-                        {{ form_errors(edit_form.dateDeb) }}
+                        {{ form_label(edit_form.dateDebut) }}
+                        {{ form_widget(edit_form.dateDebut) }}
+                        {{ form_errors(edit_form.dateDebut) }}
                     </div>
                     <div class="input-field col s6">
                         {{ form_label(edit_form.dateFin) }}
