--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,6 +34,8 @@
 
 
     {% block body %}{% endblock %}
+
+    {% block fos_user_content %}{% endblock %}
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
             <!-- materialize -->
