--- a/src/FormationBundle/Resources/views/promotion/listeelevprom.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/listeelevprom.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1 class="titre">eleve list in this promotion</h1>
+    <h1 class="titre">Liste des élèves de cette promotion</h1>
 
     <div class="container-fluid">
         <div class="row">
@@ -11,7 +11,7 @@
                     <tr>
                         <th>Nom</th>
                         <th>Date de naissance</th>
-                        <th>tel</th>
+                        <th>N° de Téléphone</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
@@ -27,10 +27,10 @@
                             <td>
                                 <ul>
                                     <li>
-                                        <a href="{{ path('eleve_show', { 'id': eleve.id }) }}">show</a>
+                                        <a href="{{ path('eleve_show', { 'id': eleve.id }) }}">Détails</a>
                                     </li>
                                     <li>
-                                        <a href="{{ path('eleve_edit', { 'id': eleve.id }) }}">edit</a>
+                                        <a href="{{ path('eleve_edit', { 'id': eleve.id }) }}">Editer</a>
                                     </li>
                                 </ul>
                             </td>
@@ -45,7 +45,7 @@
 
     <ul>
         <li class="button-centre">
-            <a class="btn btn-default edit_admin" href="{{ path('eleve_new') }}">Create a new entry</a>
+            <a class="btn btn-default edit_admin" href="{{ path('eleve_new') }}">Créer un nouvel élève</a>
         </li>
     </ul>
 {% endblock %}
