--- a/src/FormationBundle/Resources/views/promotion/show.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/show.html.twig
@@ -10,7 +10,7 @@
             </div>
             <div class="card-stacked">
                 <div class="card-content">
-                    <p>Date de début : {{ promotion.dateDeb|date("d/m/Y") }}</p>
+                    <p>Date de début : {{ promotion.dateDebut|date("d/m/Y") }}</p>
                     <p>Date de fin : {{ promotion.dateFin|date("d/m/Y") }}</p>
                     <p>Nombre de semaines : {{ promotion.semaines }}</p>
                     <p>Langage appris : {{ promotion.langage }}</p>
