--- a/src/FormationBundle/Resources/views/eleve/show.html.twig
+++ b/src/FormationBundle/Resources/views/eleve/show.html.twig
@@ -8,6 +8,12 @@
             <div class="card-image">
                 <img src="{{ asset('uploads/eleves/') }}{{ eleve.logo }}" alt="img" width="50" height="200" />
             </div>
+            <div class="card-image">
+                <img src="{{ asset('uploads/cv/') }}{{ eleve.cv }}" alt="img" width="50" height="200" />
+            </div>
+            <div class="card-image">
+                <img src="{{ asset('uploads/cva/') }}{{ eleve.cva }}" alt="img" width="50" height="200" />
+            </div>
             <div class="card-stacked">
                 <div class="card-content">
                     <p>Nom/Prénom  : {{ eleve.nom }}</p>
