--- a/src/FormationBundle/Resources/views/langage/new.html.twig
+++ b/src/FormationBundle/Resources/views/langage/new.html.twig
@@ -13,6 +13,12 @@
                         {{ form_widget(form.nom) }}
                         {{ form_errors(form.nom) }}
                     </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            {{ form_widget(form.module) }}
+                            {{ form_label(form.module) }}
+                            {{ form_errors(form.module) }}
+                        </div>
                 </div>
             </div>
         </div>
